fix(progress): Progress meter is no longer too big on desktop

--- a/src/components/progress.css
+++ b/src/components/progress.css
@@ -6,7 +6,9 @@
 }
 
 .progress__meter {
-  width: 100%;
+  flex-grow: 1;
+  /* HACK */
+  max-height: calc(100vh - 8rem);
   transform: rotate(270deg);
 }
 
